2001-07-17  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* tuiWin.c (_tuiSetFocus): Replace subsetCompare with subset_compare.
	* tuiLayout.c (_tuiSetLayoutTo): Likewise.
	* tui.c (_tui_vToggle_command): Likewise.

2001-07-17  Elena Zannoni  <ezannoni@redhat.com>

	* tui-file.c: Add include of tuiIO.h, for tuiPuts_unfiltered.

2001-07-16  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* tuiRegs.c (tuiDisplayRegistersFrom): Set scrollok to FALSE in
	each register window.
	(tuiCheckRegisterValues): Use REGISTER_RAW_SIZE to obtain the size
	of the register to check.
	(_tuiRegValueHasChanged): Likewise.
	(_tuiRegisterName): Use REGISTER_NAME.
	(tui_restore_gdbout): New function.
	(_tuiRegisterFormat): Use do_registers_info with gdb_stdout redirected
	to a string.
	(START_SPECIAL_REGS): Define.
	(_tuiGetRegisterRawValue): Use get_saved_register.
	(_tuiDisplayRegister): Fix clearing of register window.

2001-07-17  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* tui-file.h (fputs_unfiltered_hook): Remove.
	* tui-file.c (tui_file_flush): Remove fputs_unfiltered_hook.
	(tui_file_fputs): Likewise; simplify

2001-07-16  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* tuiStack.c: Add missing includes.
	(tuiShowFrameInfo): Don't crash when there is no symbol table 
	associated with the pc.
	* tuiSource.c (_hasBreak): Check for null source file.
	* tuiWin.c (tuiRefreshAll): Check for null winList[type].
	(_tuiSetFocus): Check for null dataWin.
	* tuiGeneralWin.c (refreshAll): Check for null list[type].

2001-07-16  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* tuiDisassem.c (tuiSetDisassemContent): Use tm_print_insn_info
	to disassemble in the curses window.
	
2001-07-16  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* tui.h: Cleanup to avoid inclusion of curses includes.
	(TuiGenWinInfo, TuiGenWinInfoPtr): Move from here.
	* tuiData.h: To here; include curses includes here.
	(setTermHeightTo): Rename of setTermHeight to follow reality.